syntax = "proto3";

option go_package = "github.com/hoangNguyenDev3/WanderSphere/backend/pkg/types/proto/pb/newsfeed_publishing;newsfeed_publishing";
package newsfeed_publishing;

service NewsfeedPublishing {
	rpc PublishPost(PublishPostRequest) returns(PublishPostResponse) {}
}

message PublishPostRequest {
	int64 user_id = 1;
	int64 post_id = 2;
}

message PublishPostResponse {
	enum PublishPostResponseStatus {
		OK = 0;
		FAILED = 1;
	}
	PublishPostResponseStatus status = 1;
}